# Snake

./: .gitignore  CMakeLists.txt  README.md  Snake
header/: Agent.h  Game.h  Snake.h  Texture.h  misc.h  pch.h
resource/: snake.rc
src/: Agent.cpp  Game.cpp  Snake.cpp  Texture.cpp  main.cpp  misc.cpp
